--- a/src/app.html
+++ b/src/app.html
@@ -4,9 +4,69 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+		<style>
+			:root {
+				--font-primary: 'Ubuntu', sans-serif;
+				--brand-accent: #ff3e00;
+				--brand-white: #ffffff;
+			}
+		
+			h1,
+			h2,
+			h3,
+			h4,
+			h5,
+			h6,
+			p,
+			div,
+			span,
+			li,
+			a,
+			button,
+			header,
+			footer,
+			nav,
+			section,
+			article,
+			aside,
+			main,
+			form,
+			fieldset,
+			legend,
+			input,
+			textarea,
+			select,
+			option,
+			label,
+			table,
+			th,
+			td,
+			tr,
+			tbody,
+			thead,
+			tfoot,
+			blockquote,
+			pre,
+			code,
+			hr,
+			figure,
+			figcaption,
+			small {
+				font-family: var(--font-primary);
+			}
+		
+			body {
+				margin: 0;
+				min-height: 100vh;
+				background-color: #151515;
+			}
+		</style>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		%sveltekit.body%
 	</body>
 </html>
